--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,102 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap w/ Vite</title>
-  </head>
-  <body>
-    <div class="container py-4 px-3 mx-auto">
-      <h1>Hello, Bootstrap and Vite!</h1>
-      <button class="btn btn-primary"><a href="./resources/resources.html"></a>Button</button>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="icon" href="android-chrome-192x192.png">
+  <link rel="apple-touch-icon" href="./apple-touch-icon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.">
+  <title>Media Impact - Home</title>
+</head>
+
+<body class="bg-dark">
+
+  <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark fadeInDown" data-bs-theme="dark">
+    
+    <div class="container-fluid ">
+      <a class="navbar-brand font-weight-bold fadeInDown" id="icon" href="./index.html">Media Impact</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navbar-list">
+          <li class="nav-item">
+            <a class="nav-link active fadeInDown" aria-current="page" href="./index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fadeInDown" href="./definiton.html">Definition</a>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle fadeInDown" href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Types of Media
+            </a>
+            <ul class="dropdown-menu fadeInDown">
+              <li><a class="dropdown-item" href="./tv.html">TV</a></li>
+              <li><a class="dropdown-item" href="./videogames.html">Video Games</a></li>
+              <li><a class="dropdown-item" href="./social.html">Social Media</a></li>
+            </ul>
+          </li>
+          <li class="nav-item fadeInDown">
+            <a class="nav-link fadeInDown" href="./solutions.html">Solutions</a>
+          </li>
+          <li class="nav-item fadeInDown">
+            <a class="nav-link fadeInDown" href="./help.html">Help</a>
+          </li>
+          <li class="nav-item fadeInDown">
+            <a class="nav-link fadeInDown" href="./sources.html">Sources</a>
+          </li>
+        </ul>
+
+      </div>
     </div>
-    <script type="module" src="./js/main.js"></script>
-  </body>
+  </nav>
+
+    <div id="carouselSlides" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselSlides" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselSlides" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselSlides" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselSlides" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      </div>
+      <h1 class="fw-bold text-center" id="header-main">Media isn't just about watching</h1>
+      <h3 class="fw-bold text-center" id="header-sub">Observe as you watch</h3>
+      <div class="carousel-inner">
+        <a href="./sources.html"><button type="button" class="btn btn-outline-light">Get Started</button></a>
+        <div class="carousel-item active" data-bs-interval="3000">
+          <img src="./imgs/news.jpg" class="d-block carousel-img" alt="news">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./imgs/games.webp" class="d-block carousel-img" alt="games">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./imgs/social.jpg" class="d-block carousel-img" alt="social">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./imgs/shows.webp" class="d-block carousel-img" alt="shows">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselSlides" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselSlides" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+  </div>
+
+
+
+
+
+
+  <script type="module" src="./js/main.js"></script>
+
+</body>
+
 </html>
