--- a/src/sources.html
+++ b/src/sources.html
@@ -99,7 +99,7 @@
     </div>
     <div class="subheader">
         <h1 class="fw-bold text-center text-light">Images</h1>
-        <div class="source-list text-light">
+        <div class="source-list text-light" id="image-list">
 
             <ul class="flex-d text-light" id="link">
                 <li><a href="https://www.ncsc.gov.uk/images/iStock-1704413556.jpg" target="_blank">🔗 Image 1</a></li>
