--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             <a class="nav-link active fadeInDown" aria-current="page" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fadeInDown" href="./definiton.html">Definition</a>
+            <a class="nav-link fadeInDown" href="./pages/definiton.html">Definition</a>
           </li>
 
           <li class="nav-item dropdown">
@@ -36,19 +36,19 @@
               Types of Media
             </a>
             <ul class="dropdown-menu fadeInDown">
-              <li><a class="dropdown-item" href="./tv.html">TV</a></li>
-              <li><a class="dropdown-item" href="./videogames.html">Video Games</a></li>
-              <li><a class="dropdown-item" href="./social.html">Social Media</a></li>
+              <li><a class="dropdown-item" href="./pages/tv.html">TV</a></li>
+              <li><a class="dropdown-item" href="./pages/videogames.html">Video Games</a></li>
+              <li><a class="dropdown-item" href="./pages/social.html">Social Media</a></li>
             </ul>
           </li>
           <li class="nav-item fadeInDown">
-            <a class="nav-link fadeInDown" href="./solutions.html">Solutions</a>
+            <a class="nav-link fadeInDown" href="./pages/solutions.html">Solutions</a>
           </li>
           <li class="nav-item fadeInDown">
-            <a class="nav-link fadeInDown" href="./help.html">Help</a>
+            <a class="nav-link fadeInDown" href="./pages/help.html">Help</a>
           </li>
           <li class="nav-item fadeInDown">
-            <a class="nav-link fadeInDown" href="./sources.html">Sources</a>
+            <a class="nav-link fadeInDown" href="./pages/sources.html">Sources</a>
           </li>
         </ul>
 
@@ -66,7 +66,7 @@
       <h1 class="fw-bold text-center" id="header-main">Media isn't just about watching</h1>
       <h3 class="fw-bold text-center" id="header-sub">Observe as you watch</h3>
       <div class="carousel-inner">
-        <a href="./sources.html"><button type="button" class="btn btn-outline-light">Get Started</button></a>
+        <a href="./pages/definiton.html"><button type="button" class="btn btn-outline-light">Get Started</button></a>
         <div class="carousel-item active" data-bs-interval="3000">
           <img src="./imgs/news.jpg" class="d-block carousel-img" alt="news">
         </div>
