--- a/src/sources.html
+++ b/src/sources.html
@@ -14,7 +14,8 @@
 <body class="bg-dark">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark fadeInDown" data-bs-theme="dark">
-        <div class="container-fluid ml-right">
+
+        <div class="container-fluid ">
             <a class="navbar-brand font-weight-bold fadeInDown" id="icon" href="./index.html">Media Impact</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -27,7 +28,7 @@
                         <a class="nav-link fadeInDown" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fadeInDown" href="./definiton.html">Definition</a>
+                        <a class="nav-link fadeInDown" href="./pages/definiton.html">Definition</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -36,19 +37,19 @@
                             Types of Media
                         </a>
                         <ul class="dropdown-menu fadeInDown">
-                            <li><a class="dropdown-item" href="./tv.html">TV</a></li>
-                            <li><a class="dropdown-item" href="./videogames.html">Video Games</a></li>
-                            <li><a class="dropdown-item" href="./social.html">Social Media</a></li>
+                            <li><a class="dropdown-item" href="./pages/tv.html">TV</a></li>
+                            <li><a class="dropdown-item" href="./pages/videogames.html">Video Games</a></li>
+                            <li><a class="dropdown-item" href="./pages/social.html">Social Media</a></li>
                         </ul>
                     </li>
                     <li class="nav-item fadeInDown">
-                        <a class="nav-link fadeInDown" href="./solutions.html">Solutions</a>
+                        <a class="nav-link fadeInDown" href="./pages/solutions.html">Solutions</a>
                     </li>
                     <li class="nav-item fadeInDown">
-                        <a class="nav-link fadeInDown" href="./help.html">Help</a>
+                        <a class="nav-link fadeInDown" href="./pages/help.html">Help</a>
                     </li>
-                    <li class="nav-item fadeInDown">
-                        <a class="nav-link fadeInDown active" href="./sources.html">Sources</a>
+                    <li class="nav-item active fadeInDown">
+                        <a class="nav-link fadeInDown" href="./pages/sources.html">Sources</a>
                     </li>
                 </ul>
 
@@ -103,9 +104,12 @@
 
             <ul class="flex-d text-light" id="link">
                 <li><a href="https://www.ncsc.gov.uk/images/iStock-1704413556.jpg" target="_blank">🔗 Image 1</a></li>
-                <li><a href="https://media.gq.com/photos/5df5a3794e7a380009b83bbd/16:9/w_2560%2Cc_limit/BestShows.jpg" target="_blank">🔗 Image 2</a></li>
-                <li><a href="https://helios-i.mashable.com/imagery/articles/06fAUXoW80v8ioXpy7C8PMu/hero-image.fill.size_1200x675.v1623389301.png" target="_blank">🔗 Image 3</a></li>
-                <li><a href="https://groups.google.com/group/digital-services-2024/attach/25a9aa043ccfb/6.jpg?part=0.1&view=1" target="_blank">🔗 Image 4</a></li>
+                <li><a href="https://media.gq.com/photos/5df5a3794e7a380009b83bbd/16:9/w_2560%2Cc_limit/BestShows.jpg"
+                        target="_blank">🔗 Image 2</a></li>
+                <li><a href="https://helios-i.mashable.com/imagery/articles/06fAUXoW80v8ioXpy7C8PMu/hero-image.fill.size_1200x675.v1623389301.png"
+                        target="_blank">🔗 Image 3</a></li>
+                <li><a href="https://groups.google.com/group/digital-services-2024/attach/25a9aa043ccfb/6.jpg?part=0.1&view=1"
+                        target="_blank">🔗 Image 4</a></li>
             </ul>
         </div>
     </div>
