--- a/src/help.html
+++ b/src/help.html
@@ -8,13 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.">
-    <title>Media Impact - Definition</title>
+    <title>Media Impact - Help</title>
 </head>
 
 <body class="bg-dark">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark fadeInDown" data-bs-theme="dark">
-        <div class="container-fluid ml-right">
+
+        <div class="container-fluid ">
             <a class="navbar-brand font-weight-bold fadeInDown" id="icon" href="./index.html">Media Impact</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -27,7 +28,7 @@
                         <a class="nav-link fadeInDown" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fadeInDown active" href="./definiton.html">Definition</a>
+                        <a class="nav-link fadeInDown" href="./pages/definiton.html">Definition</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -35,26 +36,27 @@
                             aria-expanded="false">
                             Types of Media
                         </a>
-                        <ul class="dropdown-menu fadeInDown active">
-                            <li><a class="dropdown-item" href="./tv.html">TV</a></li>
-                            <li><a class="dropdown-item" href="./videogames.html">Video Games</a></li>
-                            <li><a class="dropdown-item" href="./social.html">Social Media</a></li>
+                        <ul class="dropdown-menu fadeInDown">
+                            <li><a class="dropdown-item" href="./pages/tv.html">TV</a></li>
+                            <li><a class="dropdown-item" href="./pages/videogames.html">Video Games</a></li>
+                            <li><a class="dropdown-item" href="./pages/social.html">Social Media</a></li>
                         </ul>
                     </li>
                     <li class="nav-item fadeInDown">
-                        <a class="nav-link fadeInDown" href="./solutions.html">Solutions</a>
+                        <a class="nav-link fadeInDown" href="./pages/solutions.html">Solutions</a>
                     </li>
                     <li class="nav-item fadeInDown">
-                        <a class="nav-link fadeInDown" href="./help.html">Help</a>
+                        <a class="nav-link active fadeInDown" href="./pages/help.html">Help</a>
                     </li>
                     <li class="nav-item fadeInDown">
-                        <a class="nav-link fadeInDown" href="./sources.html">Sources</a>
+                        <a class="nav-link fadeInDown" href="./pages/sources.html">Sources</a>
                     </li>
                 </ul>
 
             </div>
         </div>
     </nav>
+
 
 
     <script type="module" src="./js/main.js"></script>
