--- a/src/videogames.html
+++ b/src/videogames.html
@@ -12,9 +12,9 @@
 </head>
 
 <body class="bg-dark">
-
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark fadeInDown" data-bs-theme="dark">
-        <div class="container-fluid ml-right">
+
+        <div class="container-fluid ">
             <a class="navbar-brand font-weight-bold fadeInDown" id="icon" href="./index.html">Media Impact</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -27,7 +27,7 @@
                         <a class="nav-link fadeInDown" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fadeInDown" href="./definiton.html">Definition</a>
+                        <a class="nav-link fadeInDown" href="./pages/definiton.html">Definition</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -36,19 +36,19 @@
                             Types of Media
                         </a>
                         <ul class="dropdown-menu fadeInDown">
-                            <li><a class="dropdown-item" href="./tv.html">TV</a></li>
-                            <li><a class="dropdown-item" href="./videogames.html">Video Games</a></li>
-                            <li><a class="dropdown-item" href="./social.html">Social Media</a></li>
+                            <li><a class="dropdown-item" href="./pages/tv.html">TV</a></li>
+                            <li><a class="dropdown-item" href="./pages/videogames.html">Video Games</a></li>
+                            <li><a class="dropdown-item" href="./pages/social.html">Social Media</a></li>
                         </ul>
                     </li>
                     <li class="nav-item fadeInDown">
-                        <a class="nav-link fadeInDown" href="./solutions.html">Solutions</a>
+                        <a class="nav-link fadeInDown" href="./pages/solutions.html">Solutions</a>
                     </li>
                     <li class="nav-item fadeInDown">
-                        <a class="nav-link fadeInDown" href="./help.html">Help</a>
+                        <a class="nav-link fadeInDown" href="./pages/help.html">Help</a>
                     </li>
                     <li class="nav-item fadeInDown">
-                        <a class="nav-link fadeInDown" href="./sources.html">Sources</a>
+                        <a class="nav-link fadeInDown" href="./pages/sources.html">Sources</a>
                     </li>
                 </ul>
 
